--- a/organigramme.html
+++ b/organigramme.html
@@ -58,22 +58,36 @@
       -webkit-backdrop-filter: blur(2px);
     }
 
-    header{
-      padding: 12px 14px 6px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-    }
-    .title{
-      font-size: 30px;
-      font-weight: 900;
-      letter-spacing:.2px;
-      text-shadow: 0 8px 18px rgba(0,0,0,.65);
-      opacity:.92;
-    }
+   header{
+  padding: 12px 14px 6px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+  flex-wrap: nowrap;
+}
 
-    .topBtns{ display:flex; gap:10px; }
+.title{
+  font-size: 30px;
+  font-weight: 900;
+  letter-spacing:.2px;
+  text-shadow: 0 8px 18px rgba(0,0,0,.65);
+  opacity:.92;
+
+  /* ✅ empêche le titre de pousser les boutons */
+  flex: 1 1 auto;
+  min-width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.topBtns{
+  display:flex;
+  gap:10px;
+  flex: 0 0 auto;
+}
+
     .chipBtn{
       border:1px solid rgba(255,255,255,.15);
       background: rgba(0,0,0,.40);
