--- a/equipes.html
+++ b/equipes.html
@@ -283,6 +283,7 @@
       <h1>Équipes</h1>
       <div class="actions">
                 <button class="btn secondary" id="btnBack">Retour</button>
+                <button class="chipBtn" onclick="reload()">Actualiser</button>        
       </div>
     </header>
 
