--- a/book.html
+++ b/book.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>BOOK</title>
+  <script>
+    window.location.href = "en-construction.html";
+  </script>
+</head>
+<body>
+</body>
+</html>
