--- a/book.html
+++ b/book.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>BOOK</title>
   <script>
-    window.location.href = "en-construction.html";
+    window.location.href = "en-construction.png";
   </script>
 </head>
 <body>
