--- a/index.html
+++ b/index.html
@@ -114,22 +114,22 @@ body::before{
 
   <section class="grid" aria-label="Menu">
     <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/" target="_self"><img src="entretien.png" alt="Entretien"></a>
-    <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
+    <a class="btn" href="dconstruction.png"><img src="documents.png" alt="Documents"></a>
 
     <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
-    <a class="btn" href="informations.html"><img src="informations.png" alt="Informations"></a>
+    <a class="btn" href="construction.png"><img src="informations.png" alt="Informations"></a>
 
-    <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
+    <a class="btn" href="construction.png"><img src="planning.png" alt="Planning"></a>
     <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
-    <a class="btn" href="book.html"><img src="book.png" alt="Book"></a>
-    <a class="btn" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
+    <a class="btn" href="construction.png"><img src="book.png" alt="Book"></a>
+    <a class="btn" href="construction.png"><img src="galerie.png" alt="Galerie"></a>
     
-    <a class="btn" href="admin.html"><img src="admin.png" alt="Admin"></a>
-    <a class="btn" href="gardes postées.html"><img src="gardes postées.png" alt="gardes postées"></a>
+    <a class="btn" href="construction.png"><img src="admin.png" alt="Admin"></a>
+    <a class="btn" href="construction.png"><img src="gardes postées.png" alt="gardes postées"></a>
 
-     <a class="btn" href="tickets carburant.html"><img src="tickets carburant.png" alt="tickets carburants"></a>
-    <a class="btn" href="désinfection VSAV.html"><img src="désinfection VSAV.png" alt="désinfection VSAV"></a>
+     <a class="btn" href="construction.png"><img src="tickets carburant.png" alt="tickets carburants"></a>
+    <a class="btn" href="construction.png"><img src="désinfection VSAV.png" alt="désinfection VSAV"></a>
 
     
   </section>
