--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body::before{
     <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
     <a class="btn" href="construction.png"><img src="informations.png" alt="Informations"></a>
 
-    <a class="btn" href="construction.png"><img src="planning.png" alt="Planning"></a>
+    <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
     <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
     <a class="btn" href="construction.png"><img src="book.png" alt="Book"></a>
